[tool.poetry]
name = "leogregianin-github-stats"
version = "0.1.0"
description = ""
authors = ["Leonardo Gregianin <leogregianin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.2"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
